; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/nvme/extr_nvme_qpair.c_nvme_qpair_print_completion.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/nvme/extr_nvme_qpair.c_nvme_qpair_print_completion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_qpair = type { i32 }
%struct.nvme_completion = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [39 x i8] c"%s (%02x/%02x) sqid:%d cid:%d cdw0:%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvme_qpair*, %struct.nvme_completion*)* @nvme_qpair_print_completion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvme_qpair_print_completion(%struct.nvme_qpair* %0, %struct.nvme_completion* %1) #0 {
  %3 = alloca %struct.nvme_qpair*, align 8
  %4 = alloca %struct.nvme_completion*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.nvme_qpair* %0, %struct.nvme_qpair** %3, align 8
  store %struct.nvme_completion* %1, %struct.nvme_completion** %4, align 8
  %7 = load %struct.nvme_completion*, %struct.nvme_completion** %4, align 8
  %8 = getelementptr inbounds %struct.nvme_completion, %struct.nvme_completion* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @NVME_STATUS_GET_SCT(i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.nvme_completion*, %struct.nvme_completion** %4, align 8
  %12 = getelementptr inbounds %struct.nvme_completion, %struct.nvme_completion* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @NVME_STATUS_GET_SC(i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load %struct.nvme_qpair*, %struct.nvme_qpair** %3, align 8
  %16 = getelementptr inbounds %struct.nvme_qpair, %struct.nvme_qpair* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @get_status_string(i32 %18, i32 %19)
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* %6, align 4
  %23 = load %struct.nvme_completion*, %struct.nvme_completion** %4, align 8
  %24 = getelementptr inbounds %struct.nvme_completion, %struct.nvme_completion* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nvme_completion*, %struct.nvme_completion** %4, align 8
  %27 = getelementptr inbounds %struct.nvme_completion, %struct.nvme_completion* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.nvme_completion*, %struct.nvme_completion** %4, align 8
  %30 = getelementptr inbounds %struct.nvme_completion, %struct.nvme_completion* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @nvme_printf(i32 %17, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %21, i32 %22, i32 %25, i32 %28, i32 %31)
  ret void
}

declare dso_local i32 @NVME_STATUS_GET_SCT(i32) #1

declare dso_local i32 @NVME_STATUS_GET_SC(i32) #1

declare dso_local i32 @nvme_printf(i32, i8*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @get_status_string(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
